--- a/src/informationWeather/InformationWeather.styles.css
+++ b/src/informationWeather/InformationWeather.styles.css
@@ -38,7 +38,7 @@
     border: 1px solid rgb(18, 114, 117);
     color: rgb(18, 114, 117);
 }
-/*-------------------------------General-----------------------------------*/
+/*-------------------------------Error-----------------------------------*/
 .error {
     position: absolute;
     display: flex;
@@ -58,6 +58,13 @@
 .error:hover {
     background-color: rgb(247, 229, 203);
     box-shadow: 0px 10px 5px;
+}
+/*-------------------------------Loader-----------------------------------*/
+.loader {
+    position: absolute;
+    top: 120px;
+    left: 370px;
+    font-size: 20px;
 }
 /*-------------------------------General-----------------------------------*/
 .general {
